# VR-Engine

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md
client/: Makefile  client.vcxproj  client.vcxproj.filters  leap.h  main.cpp
demo/: cg  client.exp  client.lib  engine.exp  engine.lib
demo/resources/: Bathhouse_c.dds  Black Pieces.dds  Marble003_1K-JPG_Color.dds  Player_hands_BaseColor.dds  Scene.ovo
doc/: config_file
doc/html/: _bloom_effect_8h_source.html  _camera_8h_source.html  _directional_light_8h_source.html  _frame_buffer_object_8h_source.html  _holographic_material_8cpp.html  _light_8h_source.html  _list_8h_source.html  _list_element_8h_source.html  _list_iterator_8h_source.html  _material_8h_source.html  _mesh_8h_source.html  _node_8h_source.html  _physics_manager_8h_source.html  _point_light_8h_source.html  (+148 more)
engine/: BloomEffect.cpp  BloomEffect.h  BloomRenderer.cpp  BloomRenderer.h  BoundingBox.cpp  BoundingBox.h  Builder.cpp  Builder.h  CallbackManager.cpp  CallbackManager.h  Camera.cpp  Camera.h  ColorPass.cpp  ColorPass.h  CullingMode.h  DirectionalFragmentShader.h  DirectionalLight.cpp  DirectionalLight.h  Doxyfile  FragmentShader.cpp  FragmentShader.h  FrameBufferObject.cpp  FrameBufferObject.h  HolographicMaterial.cpp  HolographicMaterial.h  Light.cpp  Light.h  LightPass.cpp  LightPass.h  List.cpp  List.h  ListElement.cpp  ListElement.h  ListIterator.cpp  ListIterator.h  Makefile  Material.cpp  Material.h  Mesh.cpp  Mesh.h  (+51 more)
resources/: 105610138473_ideal_floorcoverings_dublin_twist_carpet_felt_back_bordeaux_445_4m_width_1.dds  Black Pieces_flipped.dds  Board.dds  Board_flipped.dds  White.dds  White_flipped.dds  bambooTexture.dds  bambooTexture_flipped.dds  fine_grained_wood_col_2k.dds  fine_grained_wood_col_2k_flipped.dds  forest_ground_04_diff_2k.dds  forest_ground_04_diff_2k_flipped.dds  hands.ovo  images.dds  images_flipped.dds  painted_plaster_wall_diff_2k.dds  painted_plaster_wall_diff_2k_flipped.dds  pave.dds  scarpa2.ovo  scimmia.ovo  sofa_01_Albedo.dds  sofa_01_Albedo_flipped.dds  testScene.ovo
(+434 files in other folders)
